Добавил H2, swagger начал делать тесты